--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -12,11 +12,19 @@
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
         <%= link_to(image_tag(history.picture.thumb), history) if history.picture? %>
+        <h3><%= history.user.name %></h3>
         <div class="caption">
           <h3><%= history.title %></h3>
           <small><%= time_ago_in_words(history.created_at) %> ago</small>
           <p><%= history.content.truncate(150)  %></p>
-          <p><%= link_to 'Show', history, class: "btn btn-primary" %> <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %> <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+          <p>
+            <% if user_signed_in? %>
+              <%= link_to 'Show', history, class: "btn btn-primary" %>
+              <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %> <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+            <% else %>
+              <%= link_to 'Show', history, class: "btn btn-primary" %>
+            <% end %>
+          </p>
         </div>
       </div>
     </div>
@@ -25,5 +33,3 @@
 
 
 <br>
-
-
