--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,8 +12,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link1</a></li>
-        <li><a href="#">Link2</a></li>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -26,6 +25,7 @@
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <% if user_signed_in? %>
+              <li><a href="<%= edit_user_registration_path %>">Editar</a></li>
               <li class="divider"></li>
               <li><a href="<%= destroy_user_session_path %>" data-method="DELETE">Salir</a></li>
             <% else %>
